<resources>
    <string name="app_name">jPPG</string>
    <string name="message">Baro cali</string>
    <string name="location_message">Location access denied!</string>
    <string name="home_location_set">Home location here!</string>
    <string name="to_location_set">Destination location here!</string>
    <string name="my_analog_name">jPPG</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="baro_header">Barometer</string>
    <string name="compass_header">Compass</string>
    <string name="version">β0</string>

    <!-- Messages Preferences -->
    <string name="altitude_title">Calibration Altitude</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="compass_title">Show compass</string>
    <string name="home_direction_title">Home direction</string>
    <string name="destination_direction_title">Destination direction</string>
    <string name="calibrate_baro">Calibrate now</string>
    <string name="home_location_title">Home</string>
    <string name="destination_location_title">Destination</string>
    <string name="location_header">Locations</string>
    <!-- string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string -->
</resources>