<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/baro_header">

        <!-- DropDownPreference
            app:title="@string/altitude_title"
            app:entries="@array/alt_entries"
            app:entryValues="@array/alt_values"
            app:key="altitudeD1" />

        <DropDownPreference
            app:title="@string/altitude_title"
            app:entries="@array/alt_entries"
            app:entryValues="@array/alt_values"
            app:key="altitudeD1" / -->

        <EditTextPreference
            android:title="@string/altitude_title"
            android:key="altitudeD1"
            android:selectable="true"
            android:numeric="integer" />

        <EditTextPreference
            app:title="@string/altitude_title"
            app:entries="@array/alt_entries"
            app:entryValues="@array/alt_values"
            app:key="altitudeD2"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/compass_header">

        <SwitchPreferenceCompat
            app:key="compass"
            app:title="@string/compass_title" />

        <SwitchPreferenceCompat
            app:dependency="compass"
            app:key="to_direction"
            app:title="@string/to_direction_title" />

        <SwitchPreferenceCompat
            app:dependency="compass"
            app:key="from_direction"
            app:title="@string/to_direction_title" />
    </PreferenceCategory>

</PreferenceScreen>